--- a/app/views/therapies/index.html.erb
+++ b/app/views/therapies/index.html.erb
@@ -8,7 +8,7 @@
   <% @therapies.each do |therapy| %>
     <% cache ['entry', therapy] do %>
       <div class="entry">
-        <%= image_tag('https://i0.wp.com/www.coisasdojapao.com/wp-content/uploads/2017/09/naruto.2.jpg', size: '150') %>
+        <%= image_tag('https://psicoativo.com/wp-content/uploads/2016/08/massagem-ansiedade.jpg', size: '200') %>
         <h3><%= therapy.name %></h3>
         <%= sanitize(therapy.description) %>
         <div class="price_line">
